README update and rename

--- a/trainer.ipynb
+++ b/trainer.ipynb
@@ -275,6 +275,22 @@
     "plt.savefig('resources/loss.png')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save('model.h5')"
+   ]
   }
  ],
  "metadata": {
